card section added

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
       </div>
       <!-- Banner Section -->
-      <div class="absolute bg-black text-white rounded-md p-10 bottom-10 right-10">
+      <div class="lg:absolute bg-black text-white rounded-md p-2 lg:p-10 bottom-10 lg:bottom-10 right-10 lg:right-10">
         <h1 class="text-">Meet all the heroes from the field</h1>
         <p>
           Dit amet consectetur. Condimentum dignissim adipiscing aliquam <br>
@@ -67,12 +67,63 @@
     </header>
     <main>
 <!-- Facility Section -->
-<div>
-  <div class="border-t-4 border-b-4 ">
+<div>  
+<div class="border-t-4 border-b-4 ">
     <h1 class="text-center text-3xl">Professional Hockeys Club</h1>
     <p class="text-center">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br>
       dolor. Purus urna in sit nullam proin. </p>
   </div>
+  </div>
+<!-- card Section -->
+<div class="lg:flex mx-10">
+  <!-- card1 -->
+<div> 
+  <div class="card w-72 bg-base-100 shadow-xl items-center p-10">
+    <div class="radial-progress text-primary" style="--value:87;" role="progressbar">87%</div>
+    <div class="card-body items-center text-center">
+      <h2 class="card-title">Prayer Facility</h2>
+      <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+      <div class="card-actions">
+        </div>
+    </div>
+  </div>
+</div>
+<!-- card2 -->
+<div> 
+  <div class="card w-72 bg-[base-100] shadow-xl items-center p-10">
+    <div class="radial-progress text-primary" style="--value:95;" role="progressbar">95%</div>
+    <div class="card-body items-center text-center">
+      <h2 class="card-title">Prayer Facility</h2>
+      <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+      <div class="card-actions">
+        </div>
+    </div>
+  </div>
+</div>
+<!-- card3 -->
+<div> 
+  <div class="card w-72 bg-base-100 shadow-xl items-center p-10">
+    <div class="radial-progress text-primary" style="--value:90;" role="progressbar">90%</div>
+    <div class="card-body items-center text-center">
+      <h2 class="card-title">Prayer Facility</h2>
+      <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+      <div class="card-actions">
+        </div>
+    </div>
+  </div>
+</div>
+<!-- card4 -->
+<div> 
+  <div class="card w-72 bg-base-100 shadow-xl items-center p-10">
+    <div class="radial-progress text-primary" style="--value:80;" role="progressbar">80%</div>
+    <div class="card-body items-center text-center">
+      <h2 class="card-title">Prayer Facility</h2>
+      <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+      <div class="card-actions">
+        </div>
+    </div>
+  </div>
+</div>
 </div>
     </main>
     <footer>
